--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,7 @@
     <select class="breed-select"></select>
     <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info">
-      <div class="cat-photo">photo</div>
-      <div class="full-name">name</div>
-      <div class="temperament">
-        list of cat's temperament on fulll writed strig, ok ok ok
-      </div>
-    </div>
+    <div class="cat-info"></div>
 
     <script src="index.js" type="module"></script>
   </body>
