finished home-work

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <select class="breed-select"></select>
-    <span class="loader"></span>
+    <select class="breed-select is-hidden"></select>
+    <div class="loader is-hidden"></div>
     <div class="cat-info"></div>
-
     <script src="index.js" type="module"></script>
   </body>
 </html>
